Implement valintalaskenta-tulos-service DAOs to use Spring Data JDBC WIP