@@ -3,7 +3,10 @@ package fi.vm.sade.valintalaskenta.tulos.dao.impl;
 import fi.vm.sade.valintalaskenta.domain.valinta.Hakijaryhma;
 import fi.vm.sade.valintalaskenta.tulos.dao.TulosHakijaryhmaDAO;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
+
+import fi.vm.sade.valintalaskenta.tulos.dao.repository.TulosHakijaryhmaRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Repository;
@@ -12,21 +15,18 @@ import org.springframework.stereotype.Repository;
 public class TulosHakijaryhmaDAOImpl implements TulosHakijaryhmaDAO {
   private static final Logger LOGGER = LoggerFactory.getLogger(TulosHakijaryhmaDAOImpl.class);
 
+  private final TulosHakijaryhmaRepository repo;
+
+  public TulosHakijaryhmaDAOImpl(TulosHakijaryhmaRepository repo) {
+    this.repo = repo;
+  }
+
+
   @Override
   public List<Hakijaryhma> readByHakukohdeOid(String hakukohdeoid) {
-    //TODO: Check code below
-/*    List<HakijaryhmaMigrationDTO> ryhmat =
-        datastore
-            .createQuery(HakijaryhmaMigrationDTO.class)
-            .field("hakukohdeOid")
-            .equal(hakukohdeoid)
-            .asList();
-    List<Hakijaryhma> migratedRyhmat =
-        ryhmat.stream()
-            .map(ryhma -> migrate(ryhma))
-            .sorted(comparing(Hakijaryhma::getPrioriteetti))
-            .collect(Collectors.toList());
-    return migratedRyhmat;*/
-    return new ArrayList<>();
+    return repo.findHakijaryhmasByHakukohdeOid(hakukohdeoid)
+      .stream()
+      .sorted(Comparator.comparing(hakijaryhma -> hakijaryhma.prioriteetti))
+      .toList();
   }
 }
